@@ -1,3 +1,10 @@
+2000-09-05  Dan Winship  <danw@helixcode.com>
+
+	* camel-mime-part.c (camel_mime_part_get_filename): If a MIME part
+	has no Content-Disposition, but does have a "name" on the
+	Content-Type, return that as the filename.
+	(process_header): strstrip the Content-Description
+
 2000-09-05  Chris Toshok  <toshok@helixcode.com>
 
 	* providers/nntp/camel-nntp-utils.c (get_OVER_headers): care about
